fixed meta information and title page posts spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,9 +212,6 @@ main, .notepad-share-icons, .notepad-disqus {
   .notepad-content .notepad-index-post .datetime {
     margin-bottom: 2.5rem; }
   @media only screen and (min-width: 40.063em) {
-    .notepad-content .notepad-index-post {
-      padding-top: 4.375rem;
-      padding-bottom: 4.375rem; }
       .notepad-content .notepad-index-post .datetime {
         margin-bottom: 0; } }
   .notepad-content .notepad-index-post .notepad-post-meta {
